# MachTUI

./: Cargo.toml  Gemini-History.md  README.md  gemini.md
examples/: agenda.rs  chat.rs  counter.rs  dashboard.rs  db_manager.rs  diagram_pro.rs  explorer.rs  finance.rs  gallery.rs  game.rs  installer_pro.rs  kitchen_sink.rs  mach_browser.rs  mach_ide.rs  matrix.rs  music_visualizer.rs  mvu_async.rs  oracle_headless.rs  paint.rs  personal_site.rs  portfolio.rs  project_pro.rs  remote_desktop.rs  search_pro.rs  spreadsheet.rs  sys_top.rs  system_dashboard.rs  tab_manager.rs  terminal_pro.rs  video_pro.rs  vision_waves.rs  weather.rs
scripts/: install.sh
src/: lib.rs
src/core/: animation.rs  blueprints.rs  bridge.rs  cloud.rs  components.rs  db.rs  drag.rs  events.rs  http.rs  keys.rs  macros.rs  mod.rs  modals.rs  notifications.rs  plugins.rs  shell.rs  testing.rs  widgets.rs
src/oracle/: mod.rs  server.rs
src/plume/: converter.rs  inspector.rs  layout.rs  lexer.rs  mod.rs
src/talon/: mod.rs  sync.rs  vdom.rs
src/vision/: animations.rs  charts.rs  colors.rs  icons.rs  images.rs  mod.rs  sixel.rs  sound.rs  sprites.rs  themes.rs  utils.rs  vector.rs
