[package]
name = "machtui"
version = "0.1.0"
edition = "2021"
description = "A next-generation Terminal User Interface engine with AI agent accessibility."

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.27"
futures = "0.3.32"
notify = "8.2.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
taffy = "0.9.2"
tokio = { version = "1.50.0", features = ["full"] }
