[package]
name = "machtui"
version = "3.0.0"
edition = "2021"
description = "A next-generation Terminal User Interface engine with AI agent accessibility."

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.27"
futures = "0.3.32"
image = "0.25.10"
libloading = "0.9.0"
notify = "8.2.0"
openssl = { version = "0.10.76", features = ["vendored"] }
portable-pty = "0.9.0"
rand = "0.10"
reqwest = { version = "0.13.2", features = ["json"] }
rgb = "0.8.53"
rodio = "0.22.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh2 = "0.9.5"
sysinfo = "0.38.4"
taffy = "0.9.2"
tl = "0.7.8"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
